# opt-test

ACLHelloWorld/: README.md
ACLHelloWorld/src/: main.cpp
ACLLite/: .gitignore  NOTICE  OWNERS  README.en.md  README.md  build_so.sh
ACLLite/Common/: CMakeLists.txt  Common.cpp  Common.h  Queue.h  README.md  ThreadSafeQueue.h
ACLLite/DVPPLite/: CMakeLists.txt  README.md
ACLLite/DVPPLite/include/: ImageProc.h  VdecHelper.h  VencHelper.h  VideoRead.h  VideoWrite.h
ACLLite/DVPPLite/src/: ImageProc.cpp  VdecHelper.cpp  VencHelper.cpp  VideoRead.cpp  VideoWrite.cpp
ACLLite/Doc/: common.md  dvpplite.md  media.md  omexcute.md
ACLLite/Media/: CMakeLists.txt  CameraRead.cpp  CameraRead.h  README.md
ACLLite/OMExecute/: CMakeLists.txt  README.md
ACLLite/OMExecute/include/: ModelProc.h
ACLLite/OMExecute/src/: ModelProc.cpp
ResnetPicture/: README.md
ResnetPicture/scripts/: sample_build.sh  sample_run.sh
ResnetPicture/src/: CMakeLists.txt  label.h  main.cpp
USBAudio/: Readme.md  main  main.c
USBCamera/: main  main.cpp  readme.md
audio/: capture.sh  play.sh  qzgy_48k_16_mono_30s.pcm  sample_audio  sample_audio_2ch
camera/: sample_hdmi  test_one.sh  test_two.sh  update_dt.sh  vi_l1_sample
devmem/: devmem  devmem2.c
dt_img/: dt_drm_gpio.img  dt_drm_pcie.img  dt_drm_sata.img  dt_vdp_gpio.img  dt_vdp_pcie.img  dt_vdp_sata.img
elabel/: elabel
fan/: max.sh  tesh.sh
firmware/: Ascend310B-firmware-7.1.t11.0.b226-rc-signed.run  update.sh
hdmi0_pic/: test.sh
hdmi1_pic/: sample_hdmi1  test.sh  ut_1920x1080_nv12.yuv
hdmi_desktop/: update_dt.sh
lcd/: raspberry_demo  test.sh  update_dt.sh  ut_800x480_nv12.yuv
nvme/: update.sh
pwm/: test.sh
sata/: update.sh
spi/: spidev_test  test.sh
uart/: serial  serial.c
